--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,39 +20,66 @@
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
   <style>
-    /* --- Burger CSS --- */
+    /* ✅ Menu Burger */
     .burger {
       display: none;
-      flex-direction: column;
+      font-size: 2rem;
       cursor: pointer;
-      gap: 5px;
+      margin-left: 1rem;
     }
-    .burger div {
-      width: 25px;
-      height: 3px;
-      background: #333;
-      transition: 0.3s;
-    }
-    @media(max-width: 768px) {
-      nav {
+    @media (max-width: 768px) {
+      nav ul {
         display: none;
-      }
-      nav.nav-active {
-        display: block;
-        position: absolute;
-        top: 70px;
-        left: 0;
-        width: 100%;
-        background: white;
-        padding: 1rem;
-      }
-      nav.nav-active ul {
         flex-direction: column;
-        gap: 1rem;
+        background: #fff;
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        width: 200px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       }
-      .burger {
+      nav ul.active {
         display: flex;
       }
+      .burger {
+        display: block;
+      }
+    }
+
+    /* ✅ Cartes fonctionnalités */
+    .features-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .card-link {
+      text-decoration: none;
+    }
+    .card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 1.5rem;
+      text-align: center;
+      font-size: 1.1rem;
+      font-weight: 600;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-3px);
+    }
+
+    /* ✅ Centrer le bloc avantages */
+    #avantages {
+      text-align: center;
+    }
+    #avantages ul {
+      list-style: none;
+      padding: 0;
+    }
+    #avantages li {
+      margin: .5rem 0;
     }
   </style>
 </head>
@@ -62,8 +89,7 @@
 <header>
   <div class="container header-container">
     <div class="logo">Kwik<span>Send</span></div>
-
-    <nav id="nav">
+    <nav>
       <ul class="nav-links">
         <li><a href="dashboard.html" class="active">Accueil</a></li>
         <li><a href="portefeuille.html">Portefeuille</a></li>
@@ -72,17 +98,10 @@
         <li><a href="mobile.html">Mobile Money</a></li>
       </ul>
     </nav>
-
     <div class="header-actions">
       <span id="welcome-user" style="margin-right:1rem;font-weight:600;"></span>
       <button class="cta" onclick="logout()">Déconnexion</button>
-    </div>
-
-    <!-- Burger -->
-    <div class="burger" id="burger">
-      <div></div>
-      <div></div>
-      <div></div>
+      <span class="burger" onclick="toggleMenu()">☰</span>
     </div>
   </div>
 </header>
@@ -98,10 +117,9 @@
   </div>
 </section>
 
-<!-- 🔑 Fonctionnalités (copie de la vitrine) -->
+<!-- 🔑 Fonctionnalités -->
 <section id="fonctionnalites" style="padding:3rem 1rem;">
   <h2>Nos fonctionnalités</h2>
-
   <div class="features-grid">
     <a class="card-link" href="portefeuille.html">
       <div class="card">💳 Portefeuille multi-devises</div>
@@ -119,9 +137,9 @@
 </section>
 
 <!-- 🌟 Avantages -->
-<section id="avantages" style="padding:3rem 1rem;background:#fdf8f3;text-align:center;">
+<section id="avantages" style="padding:3rem 1rem;background:#fdf8f3;">
   <h2>Pourquoi choisir KwikSend ?</h2>
-  <ul style="list-style:none;padding:0;">
+  <ul>
     <li>✔ Rapidité et fiabilité</li>
     <li>✔ Frais réduits et transparents</li>
     <li>✔ Accessible partout, 24h/24</li>
@@ -136,14 +154,13 @@
 
 <!-- Scripts -->
 <script>
-  // Récupération des infos utilisateur
+  // Récupération infos utilisateur
   const user = JSON.parse(localStorage.getItem("kwiksend_user"));
   if(user){
     document.getElementById("welcome-user").textContent = user.name;
     document.getElementById("welcome-title").textContent = `Bienvenue ${user.name} 👋`;
   } else {
-    // si pas connecté -> retour vitrine
-    window.location.href = "index.html";
+    window.location.href = "index.html"; // si pas connecté
   }
 
   // Déconnexion
@@ -152,13 +169,10 @@
     window.location.href = "index.html";
   }
 
-  // Burger toggle
-  const burger = document.getElementById("burger");
-  const nav = document.getElementById("nav");
-  burger.addEventListener("click", () => {
-    nav.classList.toggle("nav-active");
-    burger.classList.toggle("toggle");
-  });
+  // ✅ Burger toggle
+  function toggleMenu(){
+    document.querySelector("nav ul").classList.toggle("active");
+  }
 </script>
 </body>
 </html>
