--- a/public/mobile.html
+++ b/public/mobile.html
@@ -28,19 +28,15 @@
     <div class="logo">Kwik<span>Send</span></div>
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
-        <li><a href="index.html#fonctionnalites" data-i18n="nav.features">Fonctionnalités</a></li>
-        <li><a href="index.html#avantages" data-i18n="nav.advantages">Avantages</a></li>
-        <li><a href="portefeuille.html" data-i18n="nav.wallet">Portefeuille</a></li>
-        <li><a href="connexion.html" class="cta-nav" data-i18n="nav.login">Connexion</a></li>
+        <li><a href="dashboard.html">Accueil</a></li>
+        <li><a href="portefeuille.html">Portefeuille</a></li>
+        <li><a href="transfert.html">Transfert</a></li>
+        <li><a href="kwiktransfert.html">KwikTransfert</a></li>
+        <li><a href="mobile.html" class="active">Mobile Money</a></li>
       </ul>
     </nav>
     <div class="header-actions">
-      <select id="langSwitcher" onchange="switchLang(this.value)">
-        <option value="fr">🇫🇷 FR</option>
-        <option value="en">🇬🇧 EN</option>
-      </select>
-      <button id="darkToggle">🌙</button>
+      <button class="cta" onclick="logout()">Déconnexion</button>
     </div>
   </div>
 </header>
@@ -51,7 +47,7 @@
     <h1>📲 Mobile Money & IBAN</h1>
     <p>Alimentez ou retirez de l’argent via Mobile Money ou votre compte bancaire.</p>
 
-    <!-- Choix action -->
+    <!-- Formulaire -->
     <form id="mobileForm" style="display:flex;flex-direction:column;gap:1rem;margin-top:2rem;">
       <label>Action :</label>
       <select id="action" required>
@@ -81,7 +77,7 @@
 
 <!-- 📝 Footer -->
 <footer>
-  <p>© 2025 KwikSend. <span data-i18n="footer.rights">Tous droits réservés.</span></p>
+  <p>© 2025 KwikSend. <span>Tous droits réservés.</span></p>
 </footer>
 
 <!-- 📜 Scripts communs -->
@@ -89,7 +85,7 @@
 <script src="translate.js"></script>
 <script src="app.js"></script>
 
-<!-- 📲 Service Worker + logique -->
+<!-- 📲 Logique Mobile Money -->
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/sw.js').catch(console.error);
@@ -100,7 +96,7 @@
   const detailsField = document.getElementById("detailsField");
   const form = document.getElementById("mobileForm");
 
-  // Affichage du champ selon méthode
+  // --- Affichage champ selon méthode
   function updateDetailsField() {
     const method = methodEl.value;
     if (method === "iban") {
@@ -118,7 +114,7 @@
   methodEl.addEventListener("change", updateDetailsField);
   updateDetailsField();
 
-  // Simulation
+  // --- Simulation alimentation/retrait
   form.addEventListener("submit", (e) => {
     e.preventDefault();
     const action = actionEl.value;
@@ -131,31 +127,51 @@
       return;
     }
 
+    // localStorage keys
+    const BAL_KEY = 'ks_balance';
+    const HIST_KEY = 'ks_history';
+    let balance = parseFloat(localStorage.getItem(BAL_KEY) || '0');
+    let history = JSON.parse(localStorage.getItem(HIST_KEY) || '[]');
+
     if (action === "alimenter") {
-      wallet.balance += amount;
-      wallet.history.unshift({
+      balance += amount;
+      history.unshift({
+        date: new Date().toLocaleString(),
         type: "Alimentation",
         amount: +amount,
         from: method.toUpperCase(),
-        date: new Date().toLocaleDateString(),
         status: "validé"
       });
       alert(`✅ Votre portefeuille a été alimenté de ${amount} EUR via ${method.toUpperCase()}.`);
     } else {
-      wallet.balance -= amount;
-      wallet.history.unshift({
+      if (amount > balance) {
+        alert("❌ Solde insuffisant pour effectuer ce retrait.");
+        return;
+      }
+      balance -= amount;
+      history.unshift({
+        date: new Date().toLocaleString(),
         type: "Retrait",
         amount: -amount,
         to: method.toUpperCase(),
-        date: new Date().toLocaleDateString(),
         status: "attente"
       });
       alert(`⏳ Retrait de ${amount} EUR via ${method.toUpperCase()} en cours de traitement.`);
     }
 
-    // Redirection vers portefeuille
-    window.location.href = "portefeuille.html";
+    // Sauvegarde
+    localStorage.setItem(BAL_KEY, balance);
+    localStorage.setItem(HIST_KEY, JSON.stringify(history));
+
+    // Redirection portefeuille
+    window.location.href = "portefeuille.html?ok=1";
   });
+
+  // --- Déconnexion
+  function logout(){
+    localStorage.removeItem("kwiksend_user");
+    window.location.href = "index.html";
+  }
 </script>
 </body>
 </html>
