--- a/public/recevoir.html
+++ b/public/recevoir.html
@@ -28,19 +28,15 @@
     <div class="logo">Kwik<span>Send</span></div>
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
-        <li><a href="index.html#fonctionnalites" data-i18n="nav.features">Fonctionnalités</a></li>
-        <li><a href="index.html#avantages" data-i18n="nav.advantages">Avantages</a></li>
-        <li><a href="portefeuille.html" data-i18n="nav.wallet">Portefeuille</a></li>
-        <li><a href="connexion.html" class="cta-nav" data-i18n="nav.login">Connexion</a></li>
+        <li><a href="dashboard.html">Accueil</a></li>
+        <li><a href="portefeuille.html">Portefeuille</a></li>
+        <li><a href="transfert.html">Transfert</a></li>
+        <li><a href="kwiktransfert.html">KwikTransfert</a></li>
+        <li><a href="mobile.html">Mobile Money</a></li>
       </ul>
     </nav>
     <div class="header-actions">
-      <select id="langSwitcher" onchange="switchLang(this.value)">
-        <option value="fr">🇫🇷 FR</option>
-        <option value="en">🇬🇧 EN</option>
-      </select>
-      <button id="darkToggle">🌙</button>
+      <button class="cta" onclick="logout()">Déconnexion</button>
     </div>
   </div>
 </header>
@@ -75,7 +71,7 @@
 
 <!-- 📝 Footer -->
 <footer>
-  <p>© 2025 KwikSend. <span data-i18n="footer.rights">Tous droits réservés.</span></p>
+  <p>© 2025 KwikSend. <span>Tous droits réservés.</span></p>
 </footer>
 
 <!-- 📜 Scripts communs -->
@@ -83,12 +79,13 @@
 <script src="translate.js"></script>
 <script src="app.js"></script>
 
-<!-- 📲 Service Worker + logique -->
+<!-- 📲 Logique -->
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/sw.js').catch(console.error);
   }
 
+  // --- Partage
   function shareWhatsApp() {
     const link = encodeURIComponent("Reçois de l’argent via mon lien KwikSend : https://kwiksend.com/user123");
     window.open("https://wa.me/?text=" + link, "_blank");
@@ -98,18 +95,37 @@
     window.location.href = "mailto:?subject=Mon lien KwikSend&body=Reçois de l’argent via mon lien KwikSend : https://kwiksend.com/user123";
   }
 
+  // --- Simulation réception avec mise à jour portefeuille + historique
   function simulateIncoming() {
-    const amount = 75;
-    wallet.balance += amount;
-    wallet.history.unshift({
+    const BAL_KEY = 'ks_balance';
+    const HIST_KEY = 'ks_history';
+
+    const amount = 75; // montant test
+    let balance = parseFloat(localStorage.getItem(BAL_KEY) || '0');
+    let history = JSON.parse(localStorage.getItem(HIST_KEY) || '[]');
+
+    // crédit
+    balance += amount;
+    localStorage.setItem(BAL_KEY, balance);
+
+    // historique
+    history.unshift({
+      date: new Date().toLocaleString(),
       type: "Réception",
-      amount: +amount,
+      amount: amount,
       from: "Transfert externe",
-      date: new Date().toLocaleDateString(),
       status: "validé"
     });
+    localStorage.setItem(HIST_KEY, JSON.stringify(history));
+
     alert(`✅ Vous avez reçu ${amount} EUR sur votre portefeuille KwikSend.`);
     window.location.href = "portefeuille.html";
+  }
+
+  // --- Déconnexion
+  function logout(){
+    localStorage.removeItem("kwiksend_user");
+    window.location.href = "index.html";
   }
 </script>
 </body>
