Message clair sur la modif

--- a/public/index.html
+++ b/public/index.html
@@ -71,17 +71,23 @@
       <h3 data-i18n="features.wallet.title">💰 Portefeuille numérique</h3>
       <p data-i18n="features.wallet.text">Gérez votre argent en CFA et en EUR.</p>
     </div>
+
     <div class="card clickable" onclick="location.href='transfert.html'">
       <h3 data-i18n="features.africaeurope.title">🌐 Transferts Afrique ↔ Europe</h3>
       <p data-i18n="features.africaeurope.text">Envoyez ou recevez instantanément.</p>
     </div>
+
     <div class="card clickable" onclick="location.href='kwiktransfert.html'">
       <h3 data-i18n="features.kwiksend.title">👥 Transferts KwikSend ↔ KwikSend</h3>
       <p data-i18n="features.kwiksend.text">Gratuit ou à petit coût.</p>
     </div>
-    <div class="card clickable" onclick="location.href='mobile.html'">
-      <h3 data-i18n="features.mobile.title">🏦 Mobile Money & IBAN</h3>
-      <p data-i18n="features.mobile.text">Rechargez ou retirez facilement.</p>
+
+    <!-- ✅ Nouvelle fonctionnalité : Téléchargement de relevés -->
+    <div class="card clickable" onclick="location.href='releves.html'">
+      <h3 data-i18n="features.mobile.title">📄 Téléchargement de relevés</h3>
+      <p data-i18n="features.mobile.text">
+        Téléchargez un relevé officiel de vos transactions pour vos démarches.
+      </p>
     </div>
   </div>
 </section>
