🔥 Mise à jour complète - header, burger, relevés, compte

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -87,22 +87,20 @@
 
 <!-- 🧭 Header connecté -->
 <header>
-  <div class="container header-container">
+  <div class="header-container">
     <div class="logo">Kwik<span>Send</span></div>
     <nav>
-      <ul class="nav-links">
-        <li><a href="dashboard.html" class="active">Accueil</a></li>
+      <ul class="nav-links" id="nav-menu">
+        <li><a href="dashboard.html">Accueil</a></li>
         <li><a href="portefeuille.html">Portefeuille</a></li>
         <li><a href="transfert.html">Transfert</a></li>
         <li><a href="kwiktransfert.html">KwikTransfert</a></li>
-        <li><a href="mobile.html">Mobile Money</a></li>
+        <li><a href="releves.html">Relevés</a></li>
+        <li><a href="profile.html">Compte</a></li>
+        <li><a href="#" onclick="logout()">Déconnexion</a></li>
       </ul>
     </nav>
-    <div class="header-actions">
-      <span id="welcome-user" style="margin-right:1rem;font-weight:600;"></span>
-      <button class="cta" onclick="logout()">Déconnexion</button>
-      <span class="burger" onclick="toggleMenu()">☰</span>
-    </div>
+    <span class="burger" onclick="toggleMenu()">☰</span>
   </div>
 </header>
 
