--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,17 @@
       <span></span>
     </div>
 
-    <nav>
-      <ul class="nav-links" id="nav-menu">
-        <li><a href="index.html" class="active" data-i18n="nav.home">Accueil</a></li>
-        <li><a href="#fonctionnalites" data-i18n="nav.features">Fonctionnalités</a></li>
-        <li><a href="#avantages" data-i18n="nav.advantages">Avantages</a></li>
-        <li><a href="portefeuille.html" data-i18n="nav.wallet">Portefeuille</a></li>
-        <li><a href="connexion.html" class="cta-nav" data-i18n="nav.login">Connexion</a></li>
-      </ul>
-    </nav>
+<nav>
+  <ul class="nav-links" id="nav-menu">
+    <li><a href="dashboard.html">Accueil</a></li>
+    <li><a href="portefeuille.html">Portefeuille</a></li>
+    <li><a href="transfert.html">Transfert</a></li>
+    <li><a href="kwiktransfert.html">KwikTransfert</a></li>
+    <li><a href="releves.html">Relevés</a></li>
+    <li><a href="profile.html">Compte</a></li>
+    <li><a href="#" onclick="logout()">Déconnexion</a></li>
+  </ul>
+</nav>
 
     <div class="header-actions">
       <select id="langSwitcher" onchange="switchLang(this.value)">
