--- a/public/kyc.html
+++ b/public/kyc.html
@@ -23,6 +23,18 @@
 <header>
   <div class="header-container">
     <div class="logo">Kwik<span>Send</span></div>
+    <nav>
+      <ul class="nav-links" id="nav-menu">
+        <li><a href="dashboard.html">Accueil</a></li>
+        <li><a href="portefeuille.html">Portefeuille</a></li>
+        <li><a href="transfert.html">Transfert</a></li>
+        <li><a href="kwiktransfert.html">KwikTransfert</a></li>
+        <li><a href="releves.html">Relevés</a></li>
+        <li><a href="profile.html">Compte</a></li>
+        <li><a href="#" onclick="logout()">Déconnexion</a></li>
+      </ul>
+    </nav>
+    <span class="burger" onclick="toggleMenu()">☰</span>
   </div>
 </header>
 
