--- a/public/releves.html
+++ b/public/releves.html
@@ -17,17 +17,17 @@
   <div class="header-container">
     <div class="logo">Kwik<span>Send</span></div>
     <nav>
-      <ul class="nav-links">
+      <ul class="nav-links" id="nav-menu">
         <li><a href="dashboard.html">Accueil</a></li>
         <li><a href="portefeuille.html">Portefeuille</a></li>
         <li><a href="transfert.html">Transfert</a></li>
         <li><a href="kwiktransfert.html">KwikTransfert</a></li>
-        <li><a href="releves.html" class="active">Relevés</a></li>
+        <li><a href="releves.html">Relevés</a></li>
+        <li><a href="profile.html">Compte</a></li>
+        <li><a href="#" onclick="logout()">Déconnexion</a></li>
       </ul>
     </nav>
-    <div class="header-actions">
-      <button onclick="logout()" class="cta">Déconnexion</button>
-    </div>
+    <span class="burger" onclick="toggleMenu()">☰</span>
   </div>
 </header>
 
