--- a/public/transfert.html
+++ b/public/transfert.html
@@ -26,18 +26,17 @@
 <header>
   <div class="container header-container">
     <div class="logo">Kwik<span>Send</span></div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="dashboard.html">Accueil</a></li>
-        <li><a href="portefeuille.html">Portefeuille</a></li>
-        <li><a href="transfert.html" class="active">Transfert</a></li>
-        <li><a href="kwiktransfert.html">KwikTransfert</a></li>
-        <li><a href="mobile.html">Mobile Money</a></li>
-      </ul>
-    </nav>
-    <div class="header-actions">
-      <button class="cta" onclick="logout()">Déconnexion</button>
-    </div>
+<nav>
+  <ul class="nav-links" id="nav-menu">
+    <li><a href="dashboard.html">Accueil</a></li>
+    <li><a href="portefeuille.html">Portefeuille</a></li>
+    <li><a href="transfert.html">Transfert</a></li>
+    <li><a href="kwiktransfert.html">KwikTransfert</a></li>
+    <li><a href="releves.html">Relevés</a></li>
+    <li><a href="profile.html">Compte</a></li>
+    <li><a href="#" onclick="logout()">Déconnexion</a></li>
+  </ul>
+</nav>
   </div>
 </header>
 
