Message clair sur la modif

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -172,5 +172,7 @@
     document.querySelector("nav ul").classList.toggle("active");
   }
 </script>
+<!-- Appels scripts globaux -->
+<script src="app.js"></script>
 </body>
 </html>
