--- a/public/index.html
+++ b/public/index.html
@@ -84,13 +84,13 @@
       <p data-i18n="features.kwiksend.text">Gratuit ou à petit coût.</p>
     </div>
 
-    <!-- ✅ Nouvelle fonctionnalité : Téléchargement de relevés -->
-    <div class="card clickable" onclick="location.href='releves.html'">
-      <h3 data-i18n="features.mobile.title">📄 Téléchargement de relevés</h3>
-      <p data-i18n="features.mobile.text">
-        Téléchargez un relevé officiel de vos transactions pour vos démarches.
-      </p>
-    </div>
+<!-- ✅ Nouvelle fonctionnalité : Téléchargement de relevés -->
+<div class="card clickable" onclick="location.href='releves.html'">
+  <h3 data-i18n="features.releve.title">📄 Téléchargement de relevés</h3>
+  <p data-i18n="features.releve.text">
+    Téléchargez un relevé officiel de vos transactions pour vos démarches.
+  </p>
+</div>
   </div>
 </section>
 
@@ -119,6 +119,8 @@
 <!-- 📜 Scripts -->
 <script src="script.js"></script>
 <script src="translate.js"></script>
+<script src="app.js"></script>
+<!-- Appels scripts globaux -->
 <script src="app.js"></script>
 </body>
 </html>
