--- a/public/mentions.html
+++ b/public/mentions.html
@@ -56,7 +56,7 @@
   <p><strong>Nom commercial :</strong> KwikSend</p>
   <p><strong>Propriétaire :</strong> KwikGroupe — société en développement technologique.</p>
   <p><strong>Siège social :</strong> Abidjan, Côte d’Ivoire / Paris, France.</p>
-  <p><strong>Email :</strong> contact@kwiksend.com</p>
+  <p><strong>Email :</strong> kifouliw@gmail.com</p>
   <p><strong>Responsable de la publication :</strong> Williams Kifouli</p>
 
   <h2>2. Hébergement</h2>
@@ -113,5 +113,7 @@
 <footer>
   <p>© 2025 KwikSend. Tous droits réservés.</p>
 </footer>
+<!-- Appels scripts globaux -->
+<script src="app.js"></script>
 </body>
 </html>
