--- a/public/profile.html
+++ b/public/profile.html
@@ -119,5 +119,7 @@
   window.addEventListener('storage', (e)=> { if(e.key === 'ks_kyc_status') renderKycBadge(); });
 })();
 </script>
+<!-- Appels scripts globaux -->
+<script src="app.js"></script>
 </body>
 </html>
