--- a/public/releves.html
+++ b/public/releves.html
@@ -238,5 +238,66 @@ document.addEventListener("DOMContentLoaded", () => {
   renderReleve(getHist());
 });
 </script>
+<!-- Appels scripts globaux -->
+<script src="app.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script>
+(async function(){
+  const { jsPDF } = window.jspdf;
+
+  document.getElementById("downloadPDF").addEventListener("click", () => {
+    const doc = new jsPDF();
+    const dateNow = new Date().toLocaleDateString('fr-FR');
+
+    // En-tête
+    doc.setFont("helvetica", "bold");
+    doc.setFontSize(18);
+    doc.text("Relevé officiel de transactions", 20, 20);
+    doc.setFontSize(11);
+    doc.setFont("helvetica", "normal");
+    doc.text(`Nom du titulaire : ${localStorage.getItem("kwiksend_user") || "Utilisateur KwikSend"}`, 20, 30);
+    doc.text(`Date d'émission : ${dateNow}`, 20, 36);
+    doc.line(20, 40, 190, 40);
+
+    // Données de simulation
+    const data = JSON.parse(localStorage.getItem("ks_history") || "[]");
+    let y = 50;
+
+    if (data.length === 0) {
+      doc.text("Aucune transaction enregistrée.", 20, y);
+    } else {
+      doc.setFont("helvetica", "bold");
+      doc.text("Type", 20, y);
+      doc.text("Montant (€)", 60, y);
+      doc.text("Moyen", 100, y);
+      doc.text("Date", 140, y);
+      doc.text("Motif", 170, y, { align: "right" });
+      y += 6;
+      doc.setFont("helvetica", "normal");
+
+      data.forEach(tx => {
+        doc.text(tx.type || "-", 20, y);
+        doc.text(String(tx.amount || "-"), 60, y);
+        doc.text(tx.method || "-", 100, y);
+        doc.text(tx.date || "-", 140, y);
+        doc.text(tx.motif || "-", 190, y, { align: "right" });
+        y += 6;
+      });
+    }
+
+    // Tampon officiel uniquement
+const stamp = new Image();
+stamp.src = "stamp.png";
+
+stamp.onload = () => {
+  doc.addImage(stamp, "PNG", 20, 250, 40, 40); // position et taille du tampon
+  doc.setFontSize(10);
+  doc.text("Tampon officiel KwikSend", 20, 295);
+  doc.save("Releve_KwikSend.pdf");
+};
+    };
+  });
+})();
+</script>
 </body>
 </html>
